[package]
name = "asnrun-scrapper"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "asnrun-scrapper"
path = "src/bin/asnrun-scrapper.rs"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["cookies", "blocking"] }
cookie_store = "0.21"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest_cookie_store = { version = "0.8.0", features = ["serde"] }
futures = { version = "0.3.31", features = ["thread-pool"] }
convert_case = "0.8.0"
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }
log = "0.4.27"
env_logger = "0.11.8"
dotenv = "0.15.0"
prettytable-rs = "0.10.0"
diesel = { version = "2.2.12", default-features = false, features = [
    "mysql",
    "r2d2",
    "uuid",
    "chrono",
] }
lazy_static = "1.5.0"
failure = "0.1.8"
select = "0.6.1"
rand = "0.9.1"
clap = { version = "4.5.41", features = ["derive"] }
